Add SemanticParser.h to cmake
That way IDEs will show the file in their source tree

--- a/pbrtParser/CMakeLists.txt
+++ b/pbrtParser/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES
   impl/syntactic/Scene.cpp
 
   # code for extracting the given entirires from syntactic to semantic
+  impl/semantic/SemanticParser.h
   impl/semantic/Geometry.cpp
   impl/semantic/Camera.cpp
   impl/semantic/Textures.cpp
