- added semantic LightSource class - added InfiniteLightSource class - Object class now stores list of light sources - current list of light soruces (infinite) parsed, and read/written - improvements to pbrtInfo (better printing of used materials)

--- a/pbrtParser/CMakeLists.txt
+++ b/pbrtParser/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
   impl/semantic/Camera.cpp
   impl/semantic/Textures.cpp
   impl/semantic/Materials.cpp
+  impl/semantic/Lights.cpp
   impl/semantic/Scene.cpp
   impl/semantic/BinaryFileFormat.cpp
   impl/semantic/importPBRT.cpp
