--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
+option(pbrtParser_ENABLE_UNITTESTS "Build unit tests" OFF)
+
 # include out local 'include/' dir, we can include our two public
 # headers via pbrtParser/Scene.h and pbrtParser/math.h just the way an
 # app would include them through /usr/local/
@@ -79,4 +81,7 @@ add_subdirectory(pbrtParser)
 #add_subdirectory(amalgamation)
 
 add_subdirectory(apps)
+if(pbrtParser_ENABLE_UNITTESTS)
+    add_subdirectory(test/unittests)
+endif()
 
