--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@
 ## limitations under the License.                                           ##
 ## ======================================================================== ##
 
-cmake_minimum_required(VERSION 2.8)
-
+cmake_minimum_required(VERSION 3.4)
+include(CMakePackageConfigHelpers)
 project(pbrtParser)
 
 set(pbrtParser_VERSION_MAJOR 2)
@@ -30,25 +30,23 @@ if(COMMAND cmake_policy)
   endif(${CMAKE_MAJOR_VERSION} EQUAL 3)
 endif(COMMAND cmake_policy)
 
-set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Wall)
-  
 if(NOT SET_UP_CONFIGURATIONS_DONE)
-    set(SET_UP_CONFIGURATIONS_DONE 1)
+  set(SET_UP_CONFIGURATIONS_DONE 1)
 
-    # No reason to set CMAKE_CONFIGURATION_TYPES if it's not a multiconfig generator
-    # Also no reason mess with CMAKE_BUILD_TYPE if it's a multiconfig generator.
-    if(CMAKE_CONFIGURATION_TYPES) # multiconfig generator?
-        set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Profile" CACHE STRING "" FORCE) 
-    else()
-        if(NOT CMAKE_BUILD_TYPE)
-#            message("Defaulting to release build.")
-            set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
-        endif()
-        set_property(CACHE CMAKE_BUILD_TYPE PROPERTY HELPSTRING "Choose the type of build")
-        # set the valid options for cmake-gui drop-down list
-        set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug;Release;Profile")
+  # TODO: Why do this?
+  # No reason to set CMAKE_CONFIGURATION_TYPES if it's not a multiconfig generator
+  # Also no reason mess with CMAKE_BUILD_TYPE if it's a multiconfig generator.
+  if(CMAKE_CONFIGURATION_TYPES) # multiconfig generator?
+    set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo;Profile" CACHE STRING "" FORCE) 
+  else()
+    if(NOT CMAKE_BUILD_TYPE)
+      #            message("Defaulting to release build.")
+      set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
     endif()
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY HELPSTRING "Choose the type of build")
+    # set the valid options for cmake-gui drop-down list
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug;Release;Profile")
+  endif()
 endif()
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
@@ -59,24 +57,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-# include out local 'include/' dir, we can include our two public
-# headers via pbrtParser/Scene.h and pbrtParser/math.h just the way an
-# app would include them through /usr/local/
-include_directories(${PROJECT_SOURCE_DIR}/pbrtParser/include)
-
-#include_directories(${PROJECT_SOURCE_DIR})
-#include_directories(${PROJECT_SOURCE_DIR}/internal/)
-
-#add_subdirectory(internal/ospcommon EXCLUDE_FROM_ALL)
-
 set(pbrtParser_VERSION "${pbrtParser_VERSION_MAJOR}.${pbrtParser_VERSION_MINOR}.${pbrtParser_VERSION_PATCH}")
 
-# syntactic-only parser
-#add_subdirectory(pbrtParser/syntactic)
-#add_subdirectory(pbrtParser/semantic)
 add_subdirectory(pbrtParser)
-
-#add_subdirectory(amalgamation)
-
 add_subdirectory(apps)
 
