changed default build to static, and axed dll build on windows

--- a/pbrtParser/CMakeLists.txt
+++ b/pbrtParser/CMakeLists.txt
@@ -44,22 +44,31 @@ set(SOURCES
   )
 
 # ------------------------------------------------------------------
-add_library(pbrtParser SHARED
+if (!_WIN32)
+  # iw, 1/1/2020: On windows, passing any std::string, std::vector,
+  # std::shared_ptr etc through dll boundaries is just a plain bad
+  # idea, so we'll build the shared library only on linux
+  add_library(pbrtParser_shared SHARED
+    ${SOURCES}
+    )
+  set_target_properties(pbrtParser_shared PROPERTIES VERSION ${pbrtParser_VERSION})
+  set_target_properties(pbrtParser_shared PROPERTIES CXX_VISIBILITY_PRESET hidden)
+  target_compile_definitions(pbrtParser_shared PUBLIC PBRT_PARSER_DLL_INTERFACE)
+  install(TARGETS pbrtParser_shared DESTINATION lib)
+endif()
+
+# ------------------------------------------------------------------
+# iw, 1/1/2020: TODO - on windows, probably want to build separate
+# debug and release versions of the library, and use some cmake magic
+# to set some PBRT_PARSER_LIBARAIES etc variables that automatically
+# select the right ones.
+add_library(pbrtParser STATIC
   ${SOURCES}
   )
 set_target_properties(pbrtParser PROPERTIES VERSION ${pbrtParser_VERSION})
-set_target_properties(pbrtParser PROPERTIES CXX_VISIBILITY_PRESET hidden)
-target_compile_definitions(pbrtParser PUBLIC PBRT_PARSER_DLL_INTERFACE)
-
-# ------------------------------------------------------------------
-add_library(pbrtParser_static STATIC
-  ${SOURCES}
-  )
-set_target_properties(pbrtParser_static PROPERTIES VERSION ${pbrtParser_VERSION})
-
-# ------------------------------------------------------------------
 install(TARGETS pbrtParser DESTINATION lib)
-install(TARGETS pbrtParser_static DESTINATION lib)
+
+# ------------------------------------------------------------------
 
 install(FILES include/pbrtParser/math.h DESTINATION include/pbrtParser)
 install(FILES include/pbrtParser/Scene.h DESTINATION include/pbrtParser)
