fixed yaml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ variables:
   CMAKE_OPTIONS: "-DpbrtParser_ENABLE_UNITTESTS=ON"
 
 
--------------------------------------------------------
-ubuntu 16
--------------------------------------------------------
+# -------------------------------------------------------
+# ubuntu 16
+# -------------------------------------------------------
 ubuntu16-gcc-release:
   stage: build
   tags:
