Set standard to C++11, fixes compilation on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ endif()
 cmake_minimum_required(VERSION 3.4)
 include(CMakePackageConfigHelpers)
 project(pbrtParser VERSION 2.4.0 LANGUAGES C CXX)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
